# pycauset

./: .gitignore  404.html  BENCHMARK_RESULTS.md  CMakeLists.txt  OPTIMIZATION_PLAN.md  PLAN_HYPER_OPTIMIZATION.md  PLAN_RESTORE_DISK_MANTRA.md  README.md  SETUP_INSTRUCTIONS.md  STRESS_TEST_SIMULATION_REPORT.md  STRESS_TEST_SIMULATION_REPORT_ROUND_2.md  _vals  _vecs  build.ps1  build_python.ps1  build_test.bat  build_with_env.bat  check_exports.bat  check_imports.bat  index.html  install_cuda12.ps1  mkdocs.yml  pycauset.cp312-win_amd64.pyd  pyproject.toml  release.ps1  repro_bits.py  requirements-docs.txt  run_tests.ps1  sitecustomize.py  sitemap.xml  test.py  test_interface.py  test_safety.py  verify_header.py  verify_leak.py
.github/workflows/: docs.yml  publish.yml
benchmarks/: benchmark_async_vs_sync.py  benchmark_comparison.py  benchmark_comprehensive.py  benchmark_final.py  benchmark_float.py  benchmark_float32.py  benchmark_float_types.py  benchmark_gpu.py  benchmark_outofcore.py  benchmark_solvers.py  benchmark_stress.py  benchmark_suite.py  comprehensive_benchmark.py
dev/: index.html
dev/Bindings & Dispatch/: index.html
dev/Build System/: index.html
dev/Codebase Structure/: index.html
dev/PyCauset Container Format/: index.html
dev/Python Internals/: index.html
dev/Repository Hygiene/: index.html
dev/Restructure Plan/: index.html
dev/Square-only Assumptions/: index.html
dev/Storage Semantics/: index.html
dev/Streaming Manager/: index.html
dev/Testing & Benchmarks/: index.html
dev/Warnings & Exceptions/: index.html
dev/performance_optimizations/: index.html
docs/: PYTHON.md  SETUP.md  TODO.md  index.html
docs/classes/: index.html
docs/functions/: index.html
docs/parameters/: index.html
docs/pycauset.vis/: index.html
documentation/: File Format.md  PLAN_K_IMPLEMENTATION.md  PYTHON.md  TODO.md  Welcome.md  index.md
documentation/.obsidian/: workspace.json
documentation/api/: pycauset.CausalMatrix.md  pycauset.FloatMatrix.md  pycauset.I.md  pycauset.IntegerMatrix.md  pycauset.Matrix.md  pycauset.MatrixBase.md  pycauset.TriangularBitMatrix.md  pycauset.TriangularFloatMatrix.md  pycauset.TriangularMatrix.md  pycauset.invert.md  pycauset.load.md  pycauset.matmul.md  pycauset.save.md
documentation/dev/: Agent Bootstrap.md  Bindings & Dispatch.md  Build System.md  Codebase Structure.md  PyCauset Container Format.md  Python Internals.md  Repository Hygiene.md  Restructure Plan.md  Square-only Assumptions.md  Storage Semantics.md  Testing & Benchmarks.md  Warnings & Exceptions.md  index.md  performance_optimizations.md
documentation/docs/: index.md
documentation/guides/: Advanced Usage.md  BitwiseInversion.md  Causal Sets.md  Field Theory.md  GPU Acceleration.md  Installation.md  Inversion.md  Linear Algebra Operations.md  Matrix Guide.md  Matrix Multiplication.md  Numpy Integration.md  NxM Support.md  Performance Guide.md  Performance_and_Precision.md  Spacetime.md  Storage and Memory.md  User Guide.md  Vector Guide.md  Visualization.md  index.md  performance.md
documentation/internals/: Algorithms.md  Block Matrices.md  Compute Architecture.md  CooperativeArchitecture.md  DTYPE_COMPLEX_OVERFLOW_PLAN.md  DType System.md  File Format.md  LazyEvaluation.md  Math Derivation.md  Matrix Hierarchy.md  Memory and Data.md  MemoryArchitecture.md  OPTIMIZATION_CHECKLIST.md  Release Process.md  Stateless Sprinkling.md  Streaming Manager.md  index.md
documentation/javascripts/: mathjax.js  mermaid.js
documentation/project/: Contributing.md  Philosophy.md  Protocols.md  Public API Contract.md  TODO.md  index.md
documentation/stylesheets/: extra.css
documentation/things/: Matrix Multiplication.md  pycauset.CausalMatrix.md  pycauset.IntegerMatrix.md  pycauset.Matrix.md  pycauset.TriangularFloatMatrix.md  pycauset.compute_k.md  (+4 more)
guides/: index.html
include/: AutoSolver.hpp  CausalMatrix.hpp  ComplexMatrix.hpp  ComplexVector.hpp  ComputeContext.hpp  ComputeDevice.hpp  CpuDevice.hpp  CpuSolver.hpp  DenseBitMatrix.hpp  DenseMatrix.hpp  DenseVector.hpp  DiagonalMatrix.hpp  Eigen.hpp  FileFormat.hpp  Float16.hpp  IdentityMatrix.hpp  IntegerMatrix.hpp  KMatrix.hpp  MatrixBase.hpp  MatrixFactory.hpp  MatrixOperations.hpp  MatrixTraits.hpp  MemoryMapper.hpp  ParallelUtils.hpp  PersistentObject.hpp  Spacetime.hpp  Sprinkler.hpp  StoragePaths.hpp  TriangularBitMatrix.hpp  TriangularFloatMatrix.hpp  TriangularMatrix.hpp  UnitVector.hpp  VectorBase.hpp  VectorFactory.hpp  VectorOperations.hpp
internals/: index.html
overrides/: main.html
project/: index.html
pycauset/: __init__.py  __init__.pyi
search/: search_index.json
src/: AutoSolver.cpp  CausalMatrix.cpp  ComplexVector.cpp  ComputeContext.cpp  CpuDevice.cpp  CpuSolver.cpp  DenseBitMatrix.cpp  DenseVector.cpp  Eigen.cpp  IntegerMatrix.cpp  KMatrix.cpp  MatrixBase.cpp  MatrixFactory.cpp  MatrixOperations.cpp  MemoryMapper.cpp  ParallelUtils.cpp  PersistentObject.cpp  Sprinkler.cpp  StoragePaths.cpp  SystemUtils.cpp  TriangularBitMatrix.cpp  TriangularFloatMatrix.cpp  TriangularMatrix.cpp  VectorBase.cpp  VectorFactory.cpp  VectorOperations.cpp  bindings.cpp  main.cpp
tests/: BUG_LOG.md  benchmark_gpu.cpp  benchmark_optimizations.cpp  benchmark_parallel.cpp  benchmark_solvers_extensive.cpp  test_cow.cpp  test_cpu_worker_contract.cpp  test_gpu.cpp  test_gpu_float16.cpp  test_io_accelerator.cpp  test_lazy_comprehensive.cpp  test_lazy_evaluation.cpp  test_main.cpp  test_memory_governor.cpp  test_op_registry.cpp  test_parallel.cpp  test_parallel_utils.cpp  test_pinned_memory.cpp  test_pinned_memory_extended.cpp  test_solvers.cpp  test_symmetric_matrix.cpp  test_types.cpp
tmp_debug_cache/: bench_numpy_conversion_massive_optimized.json  bench_numpy_conversion_massive_optimized_v2.json  bench_numpy_conversion_r1.json  bench_numpy_conversion_r1_optimized.json  bench_numpy_conversion_r1_optimized_v2.json  bench_numpy_conversion_r1_postfix.json  print_loaded_dlls.py
tools/: build.ps1  check_native_exports.py  check_support_matrix.py  run_python_tests.ps1  stress_100gb_matrix.py
(+659 files in other folders)
